# iptsd

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .muon.ini  .style.yapf  IPTSKenerlUserShared.h  PKGBUILD  README.md  config.c  config.go  config.h  contact.h  context.go  control.c  control.go  control.h  data.c  data.go  data.h  device.go  devices.c  devices.go  devices.h  epoll.go  go.mod  go.sum  heatmap.h  hid.c  hid.go  hid.h  ioctl.go  ipts.h  iptsd.spec  main.c  main.go  meson.build  meson_options.txt  payload.c  payload.go  (+17 more)
etc/: README.md  com.xavier.IPTSDaemon.plist  install_daemon.sh  ipts.conf  iptsd-find-hidraw  iptsd-reset-sensor  iptsd.conf  meson.build  uninstall_daemon.sh
etc/config/: surface-book-3-13.conf  surface-book-3-15.conf  surface-book1.conf  surface-book2-13.conf  surface-book2-15.conf  surface-book3-13.conf  surface-book3-15.conf  surface-laptop-1+2.conf  surface-laptop-3-13.conf  surface-laptop-3-15.conf  surface-laptop-studio.conf  surface-laptop1+2.conf  surface-laptop3-13.conf  surface-laptop3-15.conf  surface-pro-4-b.conf  surface-pro-4-c.conf  surface-pro-6.conf  surface-pro-7+.conf  surface-pro-7.conf  surface-pro-8.conf  surface-pro-x-sq1.conf  surface-pro4-a.conf  surface-pro4-b.conf  surface-pro4-c.conf  surface-pro5.conf  surface-pro6.conf  surface-pro7+.conf  surface-pro7.conf  surface-pro8.conf  surface-proX-sq1.conf  surface-proX-sq2.conf
etc/openrc/: iptsd.initd.in
etc/presets/: surface-pro-4-a.conf  surface-pro-4-b.conf  surface-pro-5.conf  surface-pro-9.conf
etc/scripts/: iptsd-find-hidraw  iptsd-find-service  iptsd-foreach  iptsd-systemd
etc/systemd/: iptsd-find-service  iptsd.service  iptsd.service.in  iptsd@.service.in
etc/udev/: 50-ipts.rules  50-iptsd.rules.in
src/: cone.c  cone.cpp  cone.h  cone.hpp  config.c  config.cpp  config.h  config.hpp  configure.h.in  constants.h  contact.c  contact.cpp  contact.h  contact.hpp  context.h  control.c  control.cpp  control.h  control.hpp  data.c  data.h  devices.c  devices.cpp  devices.h  devices.hpp  finger.c  finger.cpp  finger.h  finger.hpp  heatmap.c  heatmap.cpp  heatmap.h  heatmap.hpp  hid.c  hid.cpp  hid.h  hid.hpp  ipts.h  main.c  main.cpp  (+30 more)
src/apps/calibrate/: calibrate.hpp  main.cpp
src/apps/check-device/: check.hpp  main.cpp
src/apps/daemon/: daemon.hpp  main.cpp  stylus.hpp  touch.hpp  uinput-device.hpp
src/apps/dump/: dump.hpp  main.cpp
src/apps/perf/: main.cpp  perf.hpp
src/apps/visualization/: plot.cpp  show.cpp  visualize-png.hpp  visualize-sdl.hpp  visualize.hpp
src/common/: access.hpp  buildopts.hpp  casts.hpp  cerror.hpp  chrono.hpp  compiler.hpp  constants.hpp  cwrap.hpp  error.hpp  file.hpp  meson.build  reader.hpp  signal.hpp  types.hpp  utils.cpp  utils.hpp
src/common/utils/: access.hpp  cerror.hpp  signal.cpp  signal.hpp
src/config/: config.cpp  config.hpp  loader.hpp  meson.build
src/contacts/: config.hpp  contact.hpp  finder.cpp  finder.hpp  interface.hpp  meson.build  neutral.hpp  processor.cpp  processor.hpp  types.hpp
src/contacts/advanced/: arrayvec.hpp  detector.cpp  detector.hpp  processor.cpp  processor.hpp
src/contacts/algorithm/: border.hpp  convolution.hpp  distance_transform.hpp  gaussian_fitting.hpp  hessian.hpp  label.hpp  local_maxima.hpp  structure_tensor.hpp
src/contacts/basic/: algorithms.cpp  algorithms.hpp  cluster.cpp  cluster.hpp  detector.cpp  detector.hpp  heatmap.cpp  heatmap.hpp  processor.cpp  processor.hpp
src/contacts/container/: image.hpp  kernel.hpp  ops.hpp
src/contacts/detection/: algorithms.hpp  config.hpp  detector.hpp
src/contacts/eval/: perf.hpp
src/contacts/gfx/: cairo.hpp  cmap.hpp  color.hpp
src/contacts/math/: mat2.hpp  mat6.hpp  num.hpp  poly2.hpp  sle6.hpp  vec2.hpp  vec6.hpp
src/contacts/stability/: checker.hpp  config.hpp  stabilizer.hpp
src/contacts/tracking/: distances.hpp  tracker.hpp
src/contacts/utils/: access.hpp
src/contacts/validation/: config.hpp  validator.hpp
src/container/: image.hpp  kernel.hpp  meson.build  ops.hpp
src/core/generic/: application.hpp  cone.hpp  config.hpp  device.hpp  dft.hpp  errors.hpp
src/core/linux/: config-loader.hpp  device-runner.hpp  errors.hpp  file-runner.hpp  hidraw-device.hpp  runner.hpp  signal-handler.hpp  syscalls.hpp
src/daemon/: .#hid.cpp  cone.cpp  cone.hpp  config.cpp  config.hpp  constants.hpp  contact.cpp  contact.hpp  context.hpp  control.hpp  data.cpp  data.hpp  devices.cpp  devices.hpp  dft.cpp  dft.hpp  finger.cpp  finger.hpp  heatmap.cpp  heatmap.hpp  hid.cpp  hid.hpp  ipts.h  main.cpp  meson.build  payload.cpp  payload.hpp  reader.cpp  reader.hpp  singletouch.cpp  singletouch.hpp  stylus.cpp  stylus.hpp  touch-manager.cpp  touch-manager.hpp  touch-processing.cpp  touch-processing.hpp  touch.cpp  touch.hpp  types.hpp  (+3 more)
src/debug/: calibrate.cpp  debug.cpp  dump.cpp  finger-size.cpp  meson.build  perf.cpp  plot.cpp  proto-plot.cpp  proto-rt.cpp  show.cpp  visualization.cpp  visualization.hpp
src/debug/gfx/: cairo.hpp  cmap.hpp  color.hpp  gdk.hpp  gtk.hpp
src/drm/: device.cpp  device.hpp  meson.build
src/gfx/: cairo.hpp  cmap.hpp  color.hpp  gdk.hpp  gtk.hpp  meson.build  visualization.cpp  visualization.hpp
src/hid/: collection.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  errors.hpp  field.hpp  meson.build  parser.hpp  report.hpp  spec.hpp  state.hpp  usage.hpp
src/hid/protocol/: collection.hpp  item.hpp
src/hid/shim/: hidrd.c  hidrd.h
src/ipts/: control.cpp  control.hpp  data.hpp  descriptor.hpp  device.cpp  device.hpp  meson.build  metadata.hpp  parser.cpp  parser.hpp  protocol.h  protocol.hpp  reader.cpp  reader.hpp
src/ipts/protocol/: button.hpp  descriptor.hpp  dft.hpp  heatmap.hpp  hid.hpp  legacy.hpp  metadata.hpp  report.hpp  stylus.hpp  touchpad.hpp
src/ipts/samples/: button.hpp  dft.hpp  stylus.hpp  touch.hpp
src/math/: mat2.hpp  mat6.hpp  meson.build  num.hpp  poly2.hpp  sle6.hpp  vec2.hpp  vec6.hpp
src/prediction/: kalman-filter.hpp  pointer-kalman-filter.hpp  single-pointer-predictor.hpp
subprojects/packagefiles/hidrd/: meson.build
(+155 files in other folders)
